# vaultdb

./: Cargo.toml  LICENSE  README.md
.claude-plugin/: plugin.json
skill/: vaultdb.md
skills/vaultdb/: SKILL.md
src/: cli.rs  error.rs  filter.rs  frontmatter.rs  links.rs  main.rs  output.rs  record.rs  schema.rs  vault.rs  writer.rs
src/commands/: create.rs  delete.rs  links.rs  mod.rs  move_cmd.rs  query.rs  rename.rs  schema_cmd.rs  traverse.rs  unresolved.rs  update.rs
