[package]
name = "vaultdb"
version = "0.1.0"
edition = "2024"
description = "Database-like operations on Obsidian markdown files with YAML frontmatter"
license = "MIT"
repository = "https://github.com/rusenbb/vaultdb"
readme = "README.md"
keywords = ["obsidian", "markdown", "database", "cli", "knowledge-graph"]
categories = ["command-line-utilities", "database"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
regex = "1"
walkdir = "2"
comfy-table = "7"
colored = "2"
anyhow = "1"
thiserror = "2"
csv = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
